--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nicolas Bovorasmy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "latest",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
