--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rand-token": "^0.3.0"
   }
 }
